--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "better-sqlite3": "^12.6.2",
     "classnames": "^2.5.1",
+    "file-type": "^21.3.0",
     "formidable": "^3.5.4",
     "next": "16.1.6",
     "react": "19.2.3",
