--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.5.1",
     "file-type": "^21.3.0",
     "formidable": "^3.5.4",
+    "mime-types": "^3.0.2",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
